# ray-tracing

./: README.md
ray-tracing/: CMakeLists.txt  input.txt  main.cpp  monitor.cpp  monitor.h  object.cpp  object.h  point.cpp  point.h  ray-tracing.pro  ray.h  scene.cpp  scene.h  widget.cpp  widget.h
